--- a/src/components/template/Header.css
+++ b/src/components/template/Header.css
@@ -5,20 +5,5 @@
   align-items: center;
   background-color: #fff;
   padding: 0 15px;
-}
-
-@media (min-width: 576px) {
-
-}
-
-@media (min-width: 768px) {
-
-}
-
-@media (min-width: 992px) {
-
-}
-
-@media (min-width: 1200px) {
-
+  border-bottom: 1px solid #ddd;
 }
