--- a/src/components/RestaurantAdmin.css
+++ b/src/components/RestaurantAdmin.css
@@ -1,13 +1,13 @@
-.restaurant {
+.restaurant-admin {
   border: 1px solid #000;
 }
 
-.restaurant-image {
+.restaurant-admin-image {
   width: 100%;
   height: 190px;
 }
 
-.restaurant-card {
+.restaurant-admin-card {
   padding: 10px 15px;
   background-color: #fff;
 }
@@ -21,35 +21,50 @@
   border-bottom: 1px solid #ddd;
 }
 
-.restaurant-name {
+.restaurant-admin-name {
   font-size: 20px;
   font-weight: 400;
 }
 
-.restaurant-details {
+.restaurant-admin-details {
   display: flex;
   flex-direction: row;
   margin: 10px 0;
 }
 
-.restaurant-details-minutes {
+.restaurant-admin-details-minutes {
   margin-right: 15px;
 }
 
-.restaurant-desc {
+.restaurant-admin-desc {
   color: rgba(0, 0, 0, 0.753);
   margin-bottom: 15px;
   margin-top: 10px;
 }
 
-.restaurant-btnMenu {
-  width: 100%;
+.restaurant-admin-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+
+.restaurant-admin-btnEdit,
+.restaurant-admin-btnDelete {
+  width: 48%;
   border: none;
-  background-color: rgb(242, 34, 72);
   color: #fff;
   text-transform: uppercase;
   padding: 10px 13px;
   font-weight: 600;
   font-size: 12px;
   border-radius: 3px;
+}
+
+.restaurant-admin-btnEdit {
+  background-color: rgb(0, 68, 255);
+}
+
+.restaurant-admin-btnDelete {
+  background-color: rgb(243, 57, 51);
 }
