--- a/src/routes/Restaurant/List/Index.css
+++ b/src/routes/Restaurant/List/Index.css
@@ -5,7 +5,7 @@
 
 .container-restaurantList-text {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .restaurantList {
@@ -13,6 +13,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-top: 40px;
 }
 
 .restaurantList-item {
